logs/linkzilla.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/linkzilla'...
Listing './lib/python3.5/site-packages/linkzilla/base'...
Compiling './lib/python3.5/site-packages/linkzilla/base/client.py'...
***   File "./lib/python3.5/site-packages/linkzilla/base/client.py", line 28
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/linkzilla/base/provider.py'...
***   File "./lib/python3.5/site-packages/linkzilla/base/provider.py", line 52
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/linkzilla/django'...
Listing './lib/python3.5/site-packages/linkzilla/django/management'...
Listing './lib/python3.5/site-packages/linkzilla/django/management/commands'...
Listing './lib/python3.5/site-packages/linkzilla/lib'...
Listing './lib/python3.5/site-packages/linkzilla/services'...
Listing './lib/python3.5/site-packages/linkzilla/services/linkfeed'...
Compiling './lib/python3.5/site-packages/linkzilla/services/linkfeed/client.py'...
***   File "./lib/python3.5/site-packages/linkzilla/services/linkfeed/client.py", line 37
    print client.next_links(1)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/linkzilla/services/sape'...
Compiling './lib/python3.5/site-packages/linkzilla/services/sape/client.py'...
***   File "./lib/python3.5/site-packages/linkzilla/services/sape/client.py", line 16
    print client.next_links(1)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/linkzilla/storages'...
Listing './lib/python3.5/site-packages/linkzilla/storages/orm'...
Listing './lib/python3.5/site-packages/linkzilla-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
